# TasteMate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  tasteMateHermesPersonalAssistant.md  tasteMateIdeaReport.md
.claude/skills/doubt-driven-development/: SKILL.md
.claude/skills/idea-refine/: SKILL.md
.claude/skills/security-and-hardening/: SKILL.md
docs/: design.md  development.md  iteration-plan.md
docs/iterations/iteration-000-foundation/: design.md  discovery.md  intake.md  review.md
docs/iterations/iteration-001/: closeout.md  development.md  orchestration-addendum.md  orchestration-development.md  orchestration-plan.md  plan.md  review.md  status.md  verification.md
docs/iterations/iteration-002/: build-handoff.md  closeout.md  deploy-and-usage.md  design.md  developer-build-prompt.md  development.md  discovery.md  intake.md  plan.md  review.md  status.md  verification.md  测试进度.md
docs/iterations/iteration-003/: plan.md  (+7 more)
docs/process/: acceptance.md  documentation.md  prompt-guide.md  review-loop.md  roles.md  workflow.md
tastemate/: __init__.py  server.py
tastemate/core/: __init__.py  feedback.py  preference_signal.py  profile.py  ranker.py  scoring.py
tastemate/schemas/: candidates.py  feedback.py  profile.py
tastemate/storage/: json_store.py
tastemate/tools/: get_profile.py  rank_candidates.py  record_feedback.py  record_preference_signal.py
tests/: test_get_profile.py  test_hermes_route_plugin.py  test_profile_store.py  test_rank_candidates.py  test_record_feedback.py  test_record_preference_signal.py  test_server_tools.py
(+26 files in other folders)
