[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tastemate"
version = "0.1.0"
description = "Local TasteMate MCP server for explicit @taste candidate reranking"
readme = "docs/design.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
